<resources>
    <string name="app_name">Mito</string>

    <!-- Titles for the Bottom navigation for the main page -->
    <string name="title_nearby">Nearby</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>

    <string name="title_splashscreen">Splashscreen</string>
    <string name="title_container">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="text_login">login</string>
    <string name="content_description_logo">Logo for Mito Application</string>
    <string name="title_registration">Registration</string>
    <string name="last_name">Last Name</string>
    <string name="other_names">Other Names</string>
    <string name="first_name">First Name</string>
    <string name="text_next">Next</string>
    <string name="title_finish_registration">Finish Registration</string>
    <string name="title_name_registration">Register Name</string>
    <string name="title_create_account">Create Account</string>
    <string name="create_new_account">Create new account</string>
    <string name="user_name">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_chooser">Chooser</string>
    <string name="get_started">Get Started</string>
    <string name="title_other_information">Other Details</string>
</resources>