<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_navigation"
    app:startDestination="@id/navigation_dashboard">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.octacoresoftwares.mito.ui.nearby.HomeFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.octacoresoftwares.mito.ui.matches.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.octacoresoftwares.mito.ui.chats.NotificationsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_notifications" />
</navigation>