<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_splash_screen">

    <fragment
        android:id="@+id/navigation_splash_screen"
        android:name="com.octacoresoftwares.mito.ui.splashscreen.SplashScreenFragment"
        android:label="@string/title_splashscreen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/action_navigation_splash_screen_to_navigation_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_splash_screen"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.octacoresoftwares.mito.ui.ContainerFragment"
        android:label="@string/title_container"
        tools:layout="@layout/fragment_container" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.octacoresoftwares.mito.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>
</navigation>