<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_navigation"
    app:startDestination="@id/navigation_create_account">

    <fragment
        android:id="@+id/navigation_create_account"
        android:name="com.octacoresoftwares.mito.screens.registration.create.CreateAccountFragment"
        android:label="@string/title_create_account"
        tools:layout="@layout/fragment_create_account">
        <action
            android:id="@+id/action_navigation_create_account_to_navigation_name_registration"
            app:destination="@id/navigation_name_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_name_registration"
        android:name="com.octacoresoftwares.mito.screens.registration.name.NameRegistrationFragment"
        android:label="@string/title_name_registration"
        tools:layout="@layout/fragment_name_registration" >
        <argument
            android:name="user"
            app:argType="com.google.firebase.auth.FirebaseUser" />
        <action
            android:id="@+id/action_navigation_name_registration_to_navigation_other_information"
            app:destination="@id/navigation_other_information" />
    </fragment>
    <fragment
        android:id="@+id/navigation_other_information"
        android:name="com.octacoresoftwares.mito.screens.registration.other.OtherInformationFragment"
        android:label="@string/title_other_information"
        tools:layout="@layout/fragment_other_information">
        <argument
            android:name="user"
            app:argType="com.octacoresoftwares.mito.models.User" />
    </fragment>
</navigation>